[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = { version = "1.5", features = ["serde"] }
move-compiler = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-core-types = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
serde = "1.0"
