[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = { version = "1.5", features = ["serde"] }
move-compiler = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-core-types = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
risc0-smt = { git = "ssh://git@github.com/MovedNetwork/risc0-smt.git", rev = "1a6403447240e1f917d7e88379447b7fddf8ccea" }
risc0-zkvm = { version = "0.21" }
serde = "1.0"
serde_json = "1.0"
