[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
anyhow = "1"
move-compiler = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
risc0-zkvm = { version = "0.21.0-rc.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
