[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
methods = { path = "../methods" }
anyhow = "1"
bytes = {  version = "1.5.0", features = ["serde"]}
move-compiler = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-core-types = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
risc0-zkvm = { version = "0.21" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
