[package]
name = "guest_move2risc0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bytes = { version = "1.5" }
core = { path = "../../core" }
move-compiler = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-core-types = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-vm-runtime = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
move-vm-test-utils = { git = "https://github.com/MovedNetwork/aptos-core/", branch = "no-std-move" }
risc0-zkvm = { version = "0.21", default-features = false, features = ['std'] }
